server/upload/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload
  template:
    metadata:
      labels:
        app: upload
    spec:
      containers:
        - name: app
          image: anticrm/upload
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
