server/upload/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: upload
spec:
  selector:
    app: upload
  ports:
    - port: 80
      targetPort: 3000
